# optimizer

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  base-optimizer.Dockerfile  build_workspace.py  multi-optimize.sh  optimize.sh  optimize_workspace.py  optimize_workspace.sh  rust-optimizer.Dockerfile  workspace-optimizer.Dockerfile
.circleci/: config.yml
.github/: secret_scanning.yml
.github/workflows/: docker-publish.yml  publish.yaml
bob_the_builder/: Cargo.toml
bob_the_builder/src/: cargo_toml.rs  lib.rs  pkg_build.rs
build_workspace/: Cargo.toml
build_workspace/src/: ext.rs  main.rs
cw-build/: Cargo.toml
cw-build/src/: contract.rs  lib.rs  main.rs  workspace.rs
tests/: .gitignore
tests/apis/: .gitignore  Cargo.toml  README.md  justfile
tests/apis/.cargo/: config.toml
tests/apis/.github/: codecov.yml
tests/apis/.github/workflows/: check.yml  release.yml  test.yml
tests/apis/contracts/cw-staking/: Cargo.toml  README.md
tests/apis/contracts/cw-staking/examples/: deploy.rs  schema.rs
tests/apis/contracts/cw-staking/schema/: config_response.json  execute_msg.json  instantiate_msg.json  module-schema.json  query_msg.json  traders_response.json
tests/apis/contracts/cw-staking/schema/raw/: execute.json  query.json  response_to_info.json  response_to_reward_tokens.json  response_to_staked.json  response_to_unbonding.json
tests/apis/contracts/cw-staking/src/: contract.rs  error.rs  lib.rs  msg.rs
tests/apis/contracts/cw-staking/src/handlers/: execute.rs  mod.rs  query.rs
tests/apis/contracts/cw-staking/src/providers/: astroport.rs  junoswap.rs  mod.rs  osmosis.rs  resolver.rs  wyndex.rs
tests/apis/contracts/cw-staking/src/traits/: cw_staking_adapter.rs  identify.rs  local_cw_staking.rs  mod.rs
tests/apis/contracts/cw-staking/tests/: stake.rs
tests/apis/contracts/cw-staking/tests/common/: mod.rs
tests/apis/contracts/dex/: Cargo.toml
tests/apis/contracts/dex/.cargo/: config
tests/apis/contracts/dex/examples/: deploy.rs  schema.rs
tests/apis/contracts/dex/src/: api.rs  commands.rs  contract.rs  dex_trait.rs  error.rs  lib.rs  msg.rs  state.rs
tests/apis/contracts/dex/src/exchanges/: astroport.rs  exchange_resolver.rs  junoswap.rs  mod.rs  osmosis.rs  terraswap.rs  wyndex.rs
tests/apis/contracts/dex/src/handlers/: execute.rs  instantiate.rs  mod.rs  query.rs
tests/apis/contracts/dex/tests/: swap.rs
tests/apis/contracts/dex/tests/common/: mod.rs
tests/apis/contracts/tendermint-staking/: Cargo.toml  README.md  rustfmt.toml
tests/apis/contracts/tendermint-staking/examples/: schema.rs
tests/apis/contracts/tendermint-staking/src/: contract.rs  error.rs  lib.rs  msg.rs  staking.rs
tests/apis/publish/: publish.sh
tests/artifacts/: checksums_intermediate.txt
tests/cw-nfts-0.16.0/: Cargo.toml
tests/cw-nfts-0.16.0/contracts/cw2981-royalties/: Cargo.toml
tests/cw-nfts-0.16.0/contracts/cw721-base/: Cargo.toml  bytes.in
tests/cw-nfts-0.16.0/contracts/cw721-base/src/: lib.rs
tests/cw-nfts-0.16.0/contracts/cw721-fixed-price/: Cargo.toml
tests/cw-nfts-0.16.0/contracts/cw721-metadata-onchain/: Cargo.toml
tests/cw-nfts-0.16.0/contracts/cw721-non-transferable/: Cargo.toml
tests/no-build/: .gitignore  Cargo.toml  README.md
tests/no-build/src/: contract.rs
tests/simple-contract/: Cargo.toml  README.md  feature_build.sh  features.txt
tests/simple-contract/artifacts/: checksums.txt  checksums_intermediate.txt  simple_contract-aarch64.wasm  simple_contract-featured-aarch64.wasm  simple_contract-hello-aarch64.wasm  simple_contract-osmosis-aarch64.wasm
tests/simple-contract/src/: contract.rs
workspace/: Cargo.toml
workspace/src/: main.rs
