[package]
name = "build_workspace"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4.2"
serde = { version = "1.0.130", features = ["derive"] }
glob = "0.3.0"

## Utilities
brotli = {version= "3.3.4", features = ["std"] }
walrus = "0.19.0" # tools for working with Wasm

## Errors
anyhow = "1.0.51"
