[workspace]
members = ["contracts/*"]

# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
# See - https://github.com/apache/arrow-rs/pull/1822/files
resolver = "2"

[workspace.package]
version = "0.14.2"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = "https://abstract.money"
documentation = "https://docs.abstract.money/"
repository = "https://github.com/Abstract-OS/contracts"
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "framework"]

[workspace.dependencies]
cosmwasm-std = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
cw-controllers = { version = "1.0.1" }
cw-utils = { version = "1.0" }
cw-storage-plus = "1.0.1"
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1", features = ["library"] }
# wait for my pr to be merged
cw-asset = { version = "3.0" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }

clap = { version = "4.0.32", features = ["derive"] }
semver = "1.0"
cw-semver = { version = "1.0" }
boot-cw-plus = { git = "https://github.com/Abstract-OS/BOOT.git", tag = "v0.10.0" }
boot-core = { version = "0.10.0" }

tokio = { version = "1.4", features = ["full"] }

abstract-testing = { version = "0.14" }
abstract-core = { version = "0.14" }
abstract-boot = { version = "0.14" }
abstract-sdk = { version = "0.14" }
abstract-api = { version = "0.14" }

## Testing
rstest = "0.16.0"
speculoos = "0.11.0"
anyhow = "1"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
