[package]
name = "abstract-cw-staking-api"
description = "Cw-staking is a Abstract api for staking tokens."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "deploy"
required-features = ["boot"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
export = []
default = ["export"]
boot = ["dep:boot-core", "dep:abstract-boot"]
juno = [
  "dep:wasmswap",
  "dep:cw20_junoswap",
  "dep:cw20-stake",
  "dep:wyndex",
  "dep:wyndex-stake",
  "dep:cw-controllers",
]
# osmosis = ["dep:osmosis-std"]
terra = ["dep:astroport"]
all = ["juno", "terra", "boot"]


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true, optional = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
cw-asset = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

abstract-sdk = { workspace = true }
abstract-core = { workspace = true }
abstract-api = { workspace = true }
abstract-boot = { workspace = true, optional = true }
boot-core = { workspace = true, optional = true }

# Juno dexes #
cw20-stake = { git = "https://github.com/DA0-DA0/dao-contracts.git", optional = true, features = [
  "library",
], tag = "v1.0.0" }
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.1.2-beta", features = [
  "library",
], optional = true }
wyndex = { git = "https://github.com/cosmorama/wynddex.git", rev = "v1.1.2", optional = true }
wyndex-stake = { git = "https://github.com/cosmorama/wynddex.git", rev = "v1.1.2", optional = true, features = [
  "library",
] }
dao-cw-utils = { version = "0.13.4", package = "cw-utils" }

# Osmosis #
osmosis-std = { version = "0.12.0", optional = true }

# Terra #

# see https://github.com/astroport-fi/astroport-changelog
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "126d43216111df786472fe2a845c1e2fadfe4a36", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { version = "1.4", features = ["full"] }
semver = { version = "1.0" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
speculoos = { workspace = true }
boot-core = { workspace = true, features = ["daemon"] }
abstract-boot = { workspace = true }
clap = { workspace = true }
cw-staking = { path = ".", features = [
  "boot",
], package = "abstract-cw-staking-api" }
abstract-sdk = { workspace = true, features = ["test-utils"] }
abstract-testing = { workspace = true }
wyndex-bundle = { git = "https://github.com/Abstract-OS/integration-bundles.git", tag = "v0.3.0" }
boot-cw-plus = { workspace = true }
