[package]
name = "abstract-dex-api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
exclude = ["contract.wasm", "hash.txt"]
resolver = "2"

[package.metadata.optimizer]
features = ["juno", "terra", "osmosis"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "deploy"
required-features = ["boot"]

[features]
default = ["export"]
export = []
boot = ["dep:abstract-boot", "dep:boot-core"]
juno = ["dep:wasmswap", "dep:cw20_junoswap", "dep:wyndex"]
terra = ["dep:terraswap", "dep:astroport", "dep:cw20_junoswap"]
osmosis = ["dep:osmosis-std"]

# Keep as is until TendermintStake updates.
[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }

abstract-boot = { workspace = true, optional = true }
abstract-core = { workspace = true }
abstract-sdk = { workspace = true }
abstract-api = { workspace = true }
boot-core = { workspace = true, optional = true }

# Juno dexes #
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.2.0", features = [
  "library",
], optional = true }
wyndex = { git = "https://github.com/cosmorama/wynddex.git", rev = "v1.1.2", optional = true }

# Terra dexes #
terraswap = { version = "2.8.0", optional = true }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "7bedc6f27e59ef8b921a0980be9bc30c4aab7459", optional = true }

# Osmosis #
osmosis-std = { version = "0.13.2", optional = true }

[dev-dependencies]
abstract-boot = { workspace = true, features = ["daemon"] }
tokio = { workspace = true }
semver = { workspace = true }
anyhow = { workspace = true }
speculoos = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { workspace = true }
wyndex-bundle = { git = "https://github.com/Abstract-OS/integration-bundles.git", tag = "v0.3.0" }
abstract-testing = { workspace = true }
abstract-sdk = { workspace = true, features = ["test-utils"] }
dex = { path = ".", features = ["boot"], package = "abstract-dex-api" }
boot-cw-plus = { workspace = true }
